<resources>
    <string name="app_name">event</string>
    <string name="event_category">Event Category</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="dicoding_event">Dicoding Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="upcoming_events1">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="event_image">Your Event Image</string>
    <string name="favorite_events">favorite events</string>
    <string name="favorite_events2">Favorite Events</string>
    <string name="settings">Settings</string>
</resources>