<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/round_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/sharp_event_24"
        android:title="@string/upcoming_events" />
    <item
        android:id="@+id/nav_done"
        android:icon="@drawable/baseline_dashboard_24"
        android:title="@string/finished_events" />
    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite_events2" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_applications_24"
        android:title="Settings" />
</menu>