<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@android:color/white"
    app:cardElevation="3dp"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:id="@+id/text_event_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_category"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_event"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="fitCenter"
            android:layout_marginBottom="4dp"
            android:visibility="visible" /> <!-- Pastikan visible -->

        <TextView
            android:id="@+id/text_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_event_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_description"
            android:layout_marginTop="4dp"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
